@@ -86,3 +86,25 @@ if [regexp $want $got] then {
 } else {
     fail "multiple input files"
 }
+
+if {![binutils_assemble $srcdir/$subdir/rvct_symbol.s tmpdir/rvct_symbol.o]} then {
+    return
+}
+
+if [is_remote host] {
+    set objfile [remote_download host tmpdir/rvct_symbol.o]
+} else {
+    set objfile tmpdir/rvct_symbol.o
+}
+
+# Make sure multiple disassemblies come out the same
+
+set got [binutils_run $OBJDUMP "-D $objfile $objfile"]
+
+set want "foo.*global_a.*global_b"
+
+if [regexp $want $got] then {
+    pass "skip rvct symbol"
+} else {
+    fail "skip rvct symbol"
+}
