@@ -1,3 +1,8 @@
+2015-03-03  Jiong Wang  <jiong.wang@arm.com>
+
+	* binutils-all/arm/rvct_symbol.s: New testcase.
+	* binutils-all/arm/objdump.exp: Run it.
+
 2015-02-26  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* binutils-all/update-1.s: New file.
